--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mysql2": "^3.1.0",
     "nodemailer": "^6.9.1",
     "sequelize": "^6.28.0",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
